Module 5/index.css
/* ... */
   
  .module5-thq-content-container-elm {
    top: 320px;
    left: 65px;
    width: 1291px;
    height: 16482px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
   
  .module5-thq-fragmentation-elm {
    top: 16237px;
    left: 44px;
    width: 1184px;
    height: 245px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
   
  .module5-thq-text-elm100 {
    top: 70px;
    color: rgba(255, 255, 255, 1);
    width: 1184px;
    height: auto;
    position: absolute;
    font-size: 24px;
    font-style: ExtraLight;
    text-align: left;
    font-family: Alexandria;
    font-weight: 200;
    line-height: 35px;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module5-thq-text-elm102 {
    color: rgba(255, 255, 255, 1);
    width: 1082px;
    height: auto;
    position: absolute;
    font-size: 32px;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) ;
    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module5-thq-paging-elm1 {
    top: 15163px;
    left: 43.998046875px;
    width: 1184px;
    height: 1093px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
   
  .module5-thq-text-elm103 {
    top: 78px;
    color: rgba(255, 255, 255, 1);
    width: 1184px;
    height: auto;
    position: absolute;
    font-size: 24px;
    font-style: ExtraLight;
    text-align: left;
    font-family: Alexandria;
    font-weight: 200;
    line-height: 35px;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module5-thq-text-elm104 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm105 {
    font-weight: 300;
  }
   
  .module5-thq-text-elm106 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm107 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm108 {
    font-weight: 300;
  }
   
  .module5-thq-text-elm109 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm110 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm111 {
    font-weight: 300;
  }
   
  .module5-thq-text-elm112 {
    font-weight: 300;
  }
   
  .module5-thq-text-elm113 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm114 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm115 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm116 {
    font-weight: 300;
  }
   
  .module5-thq-text-elm119 {
    color: rgba(255, 255, 255, 1);
    width: 1082px;
    height: auto;
    position: absolute;
    font-size: 32px;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) ;
    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module5-thq-address-conversion-elm {
    top: 14065px;
    left: 44px;
    width: 1191px;
    height: 1032px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
   
  .module5-thq-container5-elm {
    top: 64px;
    left: 0px;
    width: 1191px;
    height: 968px;
    position: absolute;
    border-radius: 20px;
  }
   
  .module5-thq-fig5-elm {
    top: 300px;
    left: 514px;
    width: 158px;
    height: 110px;
    position: absolute;
  }
   
  .module5-thq-fig7-elm {
    top: 941px;
    left: 437px;
    width: 313px;
    height: 36px;
    position: absolute;
  }
   
  .module5-thq-text-elm120 {
    top: 0px;
    color: rgba(255, 255, 255, 1);
    width: 1082px;
    height: auto;
    position: absolute;
    font-size: 32px;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) ;
    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module5-thq-text-elm121 {
    top: 95px;
    left: 44px;
    color: rgba(255, 255, 255, 1);
    width: 1102px;
    height: auto;
    position: absolute;
    font-size: 24px;
    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: 35px;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module5-thq-text-elm122 {
    font-weight: 300;
  }
   
  .module5-thq-text-elm123 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm124 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm125 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm126 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm127 {
    font-weight: 300;
  }
   
  .module5-thq-text-elm128 {
    font-weight: 200;
  }
   
  .module5-thq-text-elm129 {
    font-weight: 300;
  }
   
  .module5-thq-fig6-elm {
    top: 550px;
    left: 513px;
    width: 160px;
    height: 50px;
    position: absolute;
  }
   
  .module5-thq-paging-elm2 {
    top: 13457px;
    left: 44px;
    width: 1187px;
    height: 535px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
   
  .module5-thq-text-elm131 {
    color: rgba(255, 255, 255, 1);
    width: 1082px;
    height: auto;
    position: absolute;
    font-size: 32px;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) ;
    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module5-thq-text-elm132 {
    top: 80px;
    left: 3px;
    color: rgba(255, 255, 255, 1);
    width: 1184px;
    height: auto;
    position: absolute;
    font-size: 24px;
    font-style: ExtraLight;
    text-align: left;
    font-family: Alexandria;
    font-weight: 200;
    line-height: 35px;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module5-thq-memory-allocation-policies-elm1 {
    top: 13118px;
    left: 44px;
    width: 1184px;
    height: 278px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
/* ... */

